# cmd/swag/docs/swagger.yaml
@@ -16,6 +16,15 @@ definitions:
       verify_type:
         type: integer
     type: object
+  dto.SetupTwoFactorAuthRequest:
+    properties:
+      two_factor_auth_type:
+        type: string
+      two_factor_email:
+        type: string
+      user_id:
+        type: integer
+    type: object
   dto.UpdatePasswordRegisterRequest:
     properties:
       password:
@@ -29,6 +38,13 @@ definitions:
         type: string
       verify_key:
         type: string
+    type: object
+  dto.VerifyTwoFactorAuthRequest:
+    properties:
+      two_factor_code:
+        type: string
+      user_id:
+        type: integer
     type: object
   response.ErrorResponseData:
     properties:
@@ -112,6 +128,68 @@ paths:
       summary: User Registration
       tags:
       - account management
+  /users/two-factor/setup:
+    post:
+      consumes:
+      - application/json
+      description: User Setup Two Factor Authentication
+      parameters:
+      - description: Authorization token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/dto.SetupTwoFactorAuthRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      summary: User Setup Two Factor Authentication
+      tags:
+      - account 2fa
+  /users/two-factor/verify:
+    post:
+      consumes:
+      - application/json
+      description: User Verify Two Factor Authentication
+      parameters:
+      - description: Authorization token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/dto.VerifyTwoFactorAuthRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      summary: User Verify Two Factor Authentication
+      tags:
+      - account 2fa
   /users/update-pass-register:
     post:
       consumes:
