# internal/dto/login.dto.go
@@ -31,3 +31,14 @@ type LoginResponse struct {
 	Token   string `json:"token"`
 	Message string `json:"message"`
 }
+
+type SetupTwoFactorAuthRequest struct {
+	UserId            int    `json:"user_id"`
+	TwoFactorAuthType string `json:"two_factor_auth_type"`
+	TwoFactorEmail    string `json:"two_factor_email"`
+}
+
+type VerifyTwoFactorAuthRequest struct {
+	UserId        int    `json:"user_id"`
+	TwoFactorCode string `json:"two_factor_code"`
+}
